--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -306,7 +306,7 @@ de:
   time:
     am: vormittags
     formats:
-      default: ! '%A, %d. %B %Y, %H:%M Uhr'
+      default: ! '%A, %d. %b, %H:%M Uhr' #HERE TIME FEED_ITEM CHANGE
       long: ! '%A, %d. %B %Y, %H:%M Uhr'
       short: ! '%d. %B, %H:%M Uhr'
     pm: nachmittags
