--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -96,7 +96,7 @@ en:
   link:
     about: 'About'
     contact: 'Contact'
-    home: 'my pinwall'
+    home: 'my Pinwall'
     search: 'Search'
     help: 'Introduction'
     users: 'Users'
