changed privacy and agb link

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -104,7 +104,7 @@ de:
     delete: 'Löschen'
     profile: 'mein Profil'
     news: Neuigkeiten
-    agb: "AGB's"
+    agb: "Verhaltensregeln"
     privacy: "Datenschutz"
     destroyuser: "Account löschen"
     settings: "Optionen"
