--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -108,7 +108,7 @@ en:
     news: 'News'
     destroyuser: "Delete account"
     settings: "Settings"
-    agb: "GTC"
+    agb: "Rule of Conduct"
     destroyuser: "Delete user"
     privacy: "Privacy Politics"
     manage_micropost: "Manage your microposts"
