fixed group anfrage fb

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -54,6 +54,7 @@ de:
     next: "weiter"
     back: "zurück"
     or: "oder"
+    mypinwall: "Meine Pinnwand"
     newmembers: "unsere neuen Mitglieder"
     micropost:
       hobby_example: "z.B. Klettern"
