--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -57,6 +57,7 @@ en:
     back: "back"
     or: "or"
     newmembers: "our new members"
+    mypinwall: "My Pinwall"
     micropost:
       hobby_example: "e.g. climbing"
       from: 'from'
