fixed group anfrage translate and popup for facebook anwednungsinstall anstatt touch

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -33,6 +33,8 @@ de:
   following: "folge ich"
   following2: "folgt "
   followers: "follower"
+  follow: "Folgen"
+  unfollow: "nicht mehr folgen"
   remember: "merken!"
   noremember: "nicht mehr merken!"
   doesfbknow: "...kann Facebook sehen, was ich hier mache?!"
