fixed homebase with error message

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -139,9 +139,11 @@ de:
       martialarts: Kampfsportart
       nordicwalking: Nordic Walking
       pilates: Pilates
+      rowing: "Rudern"
       skiing: Ski fahren
       slacklining: Slacken
       soccer: Fußball
+      speedbike: "Rennrad"
       surfing: Surfen
       swimming: Schwimmen
       volleyball: Volleyball
