--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -127,6 +127,8 @@ en:
       futsal: Futsal
       jujutsu: Ju Jutsu
       handball: Handball
+      rowing: "Rowing"
+      speedbike: "Speedbike"
       archery: Archery
       climbing: Climbing
       dancing: Dancing
